--- a/Lab3/wbarco_Lab3.ipynb
+++ b/Lab3/wbarco_Lab3.ipynb
@@ -1736,9 +1736,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UmB1ipWM_nSk",
-        "outputId": "8e3a5ffb-b622-459e-fa72-eaf1ca3a02ac"
+        "outputId": "281cf4cf-0318-4926-b943-a5b14d412a0a"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1751,7 +1751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "EH25TkOkZfD9"
       },
@@ -1771,9 +1771,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0mokSOnCCtZ",
-        "outputId": "fc97bbd6-8d70-4312-847f-2e31dfb64e9a"
+        "outputId": "a3245e43-5aef-43eb-f3f5-837f28d7daba"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1783,7 +1783,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 168
+          "execution_count": 31
         }
       ]
     },
@@ -1798,9 +1798,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "059227e2-ff44-45a3-f1f6-4ae401dc1a9f"
+        "outputId": "2ca9810f-419d-40f8-b4fe-fd8ffa3ec6b8"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1813,13 +1813,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLiMjbAIfPlX",
-        "outputId": "ef1c6104-3cc8-4141-9b30-8e1eb6ad1656"
+        "outputId": "c20c4332-d264-4be4-eca9-8e25592c512b"
       },
       "outputs": [
         {
@@ -1864,7 +1864,7 @@
       "metadata": {
         "id": "oULNBr_zAd9c"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1878,9 +1878,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PQLyocaFB-y4",
-        "outputId": "1c29c1d8-8228-4a12-b50f-7220e3f82d2a"
+        "outputId": "302683af-559b-4d03-8bcc-7c27c4389169"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,21 +1904,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6p2QLEr576zk",
-        "outputId": "b4da72d1-6c93-415a-da1f-a8cba5ba7fd1"
+        "outputId": "16cc43fc-f98d-4b59-f2e4-90d15deeb3ad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "39999800000\n",
-            "^C\n"
+            "2147483646\n",
+            "\n",
+            "real\t5m5.004s\n",
+            "user\t5m2.551s\n",
+            "sys\t0m0.081s\n"
           ]
         }
       ],
@@ -1938,15 +1941,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cnjCyeUdAnZj",
-        "outputId": "0f866b4f-6334-4bd8-fafe-f76890725d8e"
+        "outputId": "501e1fb0-08c8-4ecb-df87-59a9823f72f9"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "^C\n"
+            "\u001b[01m\u001b[Kcc1plus:\u001b[m\u001b[K \u001b[01;31m\u001b[Kfatal error: \u001b[m\u001b[Kmax_pairwise_product_long_full.cpp: No such file or directory\n",
+            "compilation terminated.\n",
+            "/bin/bash: line 1: ./max_pairwise_product_long_full: No such file or directory\n",
+            "\n",
+            "real\t0m0.001s\n",
+            "user\t0m0.001s\n",
+            "sys\t0m0.000s\n"
           ]
         }
       ]
@@ -1962,20 +1971,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uG6Mv-Pwlkii",
-        "outputId": "cf5fed75-71c9-4b36-b8ab-e268aed0c92c"
+        "outputId": "6e0e4316-6f7d-47ad-cb53-8078b5afd9c7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting max_pairwise_product_long_full.cpp\n"
+            "Writing max_pairwise_product_long_full.cpp\n"
           ]
         }
       ],
@@ -2029,13 +2038,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CuRKkqQc137V",
-        "outputId": "e0dd91f3-33fe-4c04-f456-4543eb166c83"
+        "outputId": "d67fa27e-7a85-4aeb-e606-13af5908cddb"
       },
       "outputs": [
         {
@@ -2159,15 +2168,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Om9Fevb0miAT",
-        "outputId": "3ac19c6f-e55c-4bfe-bee9-cd5e6b29fcfa"
+        "outputId": "5f5d2eb4-0553-4dbb-afe2-221e2f7d431d"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "570\n"
+            "/bin/bash: line 1: input0.txt: No such file or directory\n"
           ]
         }
       ]
@@ -2207,7 +2216,7 @@
       "metadata": {
         "id": "K59xQMWiBNFj"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -2220,9 +2229,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3O8dzFfEgir",
-        "outputId": "6e08d348-6814-4196-bcee-1ead15acf961"
+        "outputId": "cff9c100-e40d-4bd5-bc6a-999973b18083"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2232,7 +2241,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 180
+          "execution_count": 17
         }
       ]
     },
@@ -2247,9 +2256,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TCpdl5u_Gq1a",
-        "outputId": "1c20c284-bda7-4f27-e745-d38810b409cf"
+        "outputId": "87914a2a-b7c8-4e6b-a50b-67be2bb055ad"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -2262,20 +2271,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kuvm1C05ly2a",
-        "outputId": "b6cd5776-cfc8-48e1-b313-0059c9588193"
+        "outputId": "083f2448-0365-46be-8468-5c152094e406"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "600\n"
+            "/bin/bash: line 1: input1.txt: No such file or directory\n"
           ]
         }
       ],
@@ -2309,9 +2318,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HOdqlwJiZUIp",
-        "outputId": "3b572f44-a37f-411c-d50f-eb729f783a48"
+        "outputId": "24be7fb1-0c9e-4c65-bbc3-5bbbb6fbec25"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2321,7 +2330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 184
+          "execution_count": 20
         }
       ]
     },
@@ -2336,15 +2345,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b919c9a-8ada-4e3f-cf38-fddd5b5d6660"
+        "outputId": "409fd742-33e2-4a16-c507-069cff850318"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "571\n"
+            "/bin/bash: line 1: input2.txt: No such file or directory\n"
           ]
         }
       ]
@@ -2382,9 +2391,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pf_ZmI7BzcFR",
-        "outputId": "50ad1fd0-4227-4762-8069-22623f83f209"
+        "outputId": "3575f01b-27d6-48d5-d8cf-cabb1f4fe4c8"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2394,9 +2403,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 186
+          "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!time ./max_pairwise_product_long_full< input11.txt"
+      ],
+      "metadata": {
+        "id": "xYuAjoVNUtKC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2409,28 +2429,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BMH8mF3EKn2w",
-        "outputId": "5d08c4a8-c7f7-4ea5-95c1-659fbee9796b"
+        "outputId": "ba2685ed-b5d1-4c98-8355-36e24560c709"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "^C\n"
+            "200003177091\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pKqB3i7dIxnc",
-        "outputId": "5c16659c-8952-49da-f51c-3b86c8301711"
+        "outputId": "32806118-0780-4215-b6db-9de28c8fb80c"
       },
       "outputs": [
         {
@@ -2441,7 +2461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 189
+          "execution_count": 2
         }
       ],
       "source": [
@@ -2452,13 +2472,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "18N1ouqeMhE1",
-        "outputId": "934f30fa-b0dc-4ba5-c5c1-76cd8da6db96"
+        "outputId": "2d1f039b-b1fe-4ada-cac1-053a756e24d5"
       },
       "outputs": [
         {
@@ -2469,7 +2489,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 191
+          "execution_count": 22
         }
       ],
       "source": [
@@ -5926,7 +5946,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 324,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5950,7 +5970,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 326,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6010,7 +6030,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6033,7 +6053,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
