--- a/Lab3/wbarco_Lab3.ipynb
+++ b/Lab3/wbarco_Lab3.ipynb
@@ -1813,13 +1813,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLiMjbAIfPlX",
-        "outputId": "c20c4332-d264-4be4-eca9-8e25592c512b"
+        "outputId": "654cfff9-23f8-4c48-86b5-af13a1912bea"
       },
       "outputs": [
         {
@@ -1864,7 +1864,7 @@
       "metadata": {
         "id": "oULNBr_zAd9c"
       },
-      "execution_count": 35,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1878,9 +1878,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PQLyocaFB-y4",
-        "outputId": "302683af-559b-4d03-8bcc-7c27c4389169"
+        "outputId": "4e25b761-2032-44be-bf3a-e0538ff531f2"
       },
-      "execution_count": 36,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1941,21 +1941,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cnjCyeUdAnZj",
-        "outputId": "501e1fb0-08c8-4ecb-df87-59a9823f72f9"
+        "outputId": "93c6956d-cb7c-4141-c29b-44d1823c5018"
       },
-      "execution_count": 11,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[01m\u001b[Kcc1plus:\u001b[m\u001b[K \u001b[01;31m\u001b[Kfatal error: \u001b[m\u001b[Kmax_pairwise_product_long_full.cpp: No such file or directory\n",
-            "compilation terminated.\n",
-            "/bin/bash: line 1: ./max_pairwise_product_long_full: No such file or directory\n",
+            "2147483646\n",
             "\n",
-            "real\t0m0.001s\n",
-            "user\t0m0.001s\n",
-            "sys\t0m0.000s\n"
+            "real\t5m6.304s\n",
+            "user\t5m3.104s\n",
+            "sys\t0m0.071s\n"
           ]
         }
       ]
@@ -2413,10 +2411,26 @@
         "!time ./max_pairwise_product_long_full< input11.txt"
       ],
       "metadata": {
-        "id": "xYuAjoVNUtKC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xYuAjoVNUtKC",
+        "outputId": "bb2a09d1-35bc-4a7b-8af7-8b6eef12ec6a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2147483646\n",
+            "\n",
+            "real\t5m5.371s\n",
+            "user\t5m2.843s\n",
+            "sys\t0m0.067s\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3276,30 +3290,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "ryHJ30WIOb_k",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "069a624b-ae4e-42f8-8946-20152e9a3790"
+        "outputId": "c542dbcb-5984-44a0-ded6-23b671034a7d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "40000000000\n",
+            "\u001b[01m\u001b[Kcc1plus:\u001b[m\u001b[K \u001b[01;31m\u001b[Kfatal error: \u001b[m\u001b[Kmax_pairwise_product_sort.cpp: No such file or directory\n",
+            "compilation terminated.\n",
+            "/bin/bash: line 1: ./max_pairwise_product_sort: No such file or directory\n",
             "\n",
-            "real\t0m0.004s\n",
-            "user\t0m0.001s\n",
-            "sys\t0m0.002s\n"
+            "real\t0m0.001s\n",
+            "user\t0m0.000s\n",
+            "sys\t0m0.001s\n"
           ]
         }
       ],
       "source": [
         "!g++ max_pairwise_product_sort.cpp -o max_pairwise_product_sort\n",
-        "!time ./max_pairwise_product_sort < input3.txt"
+        "!time ./max_pairwise_product_sort < input11.txt"
       ]
     },
     {
