--- a/Lab3/wbarco_Lab3.ipynb
+++ b/Lab3/wbarco_Lab3.ipynb
@@ -1736,22 +1736,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UmB1ipWM_nSk",
-        "outputId": "281cf4cf-0318-4926-b943-a5b14d412a0a"
+        "outputId": "afbf87a6-c4fa-4f70-c80f-5a39e265ebe3"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting WriteTest.cpp\n"
+            "Writing WriteTest.cpp\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "EH25TkOkZfD9"
       },
@@ -1771,9 +1771,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0mokSOnCCtZ",
-        "outputId": "a3245e43-5aef-43eb-f3f5-837f28d7daba"
+        "outputId": "c84063c9-e85d-4e34-a7c7-9b21e37eb7f1"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1783,7 +1783,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 7
         }
       ]
     },
@@ -1798,28 +1798,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ca9810f-419d-40f8-b4fe-fd8ffa3ec6b8"
+        "outputId": "5989d318-0037-44ad-e4c3-3d3c97ee4fe6"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting output11.txt\n"
+            "Writing output11.txt\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLiMjbAIfPlX",
-        "outputId": "654cfff9-23f8-4c48-86b5-af13a1912bea"
+        "outputId": "a4bd7095-7121-487c-a0a7-4d2ce18b7905"
       },
       "outputs": [
         {
@@ -1864,7 +1864,7 @@
       "metadata": {
         "id": "oULNBr_zAd9c"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1878,15 +1878,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PQLyocaFB-y4",
-        "outputId": "4e25b761-2032-44be-bf3a-e0538ff531f2"
+        "outputId": "baa56cd4-0032-452f-fcbc-1a4fcb4d1736"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting output12.txt\n"
+            "Writing output12.txt\n"
           ]
         }
       ]
@@ -1969,13 +1969,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uG6Mv-Pwlkii",
-        "outputId": "6e0e4316-6f7d-47ad-cb53-8078b5afd9c7"
+        "outputId": "cde0011e-9440-4c4b-fb98-7bcd4ab785a9"
       },
       "outputs": [
         {
@@ -2036,20 +2036,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CuRKkqQc137V",
-        "outputId": "d67fa27e-7a85-4aeb-e606-13af5908cddb"
+        "outputId": "ae5087bc-12f1-4078-b5bc-ea66cf144581"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting max_pairwise_product_long_full_execints.cpp\n"
+            "Writing max_pairwise_product_long_full_execints.cpp\n"
           ]
         }
       ],
@@ -2166,9 +2166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Om9Fevb0miAT",
-        "outputId": "5f5d2eb4-0553-4dbb-afe2-221e2f7d431d"
+        "outputId": "5b379510-67b0-45ee-bef4-f463f3808e85"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -2389,9 +2389,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pf_ZmI7BzcFR",
-        "outputId": "3575f01b-27d6-48d5-d8cf-cabb1f4fe4c8"
+        "outputId": "051a20ac-49bf-4317-b5a0-796a80634795"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2435,6 +2435,33 @@
     {
       "cell_type": "code",
       "source": [
+        "!time ./max_pairwise_product_long_full_execints < input11.txt"
+      ],
+      "metadata": {
+        "id": "TVa4Joeh2aqe",
+        "outputId": "fb4b9bb2-5ed8-458b-cfa0-4c87ac512f50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "200003177091\n",
+            "\n",
+            "real\t7m34.659s\n",
+            "user\t7m30.828s\n",
+            "sys\t0m0.154s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!g++ max_pairwise_product_long_full_execints.cpp -o max_pairwise_product_long_full_execints\n",
         "!./max_pairwise_product_long_full_execints < input11.txt"
       ],
@@ -2443,9 +2470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BMH8mF3EKn2w",
-        "outputId": "ba2685ed-b5d1-4c98-8355-36e24560c709"
+        "outputId": "1101cbfc-731a-447a-8a87-884fad0f0751"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -2458,58 +2485,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pKqB3i7dIxnc",
-        "outputId": "67c72195-a094-4dc9-8a7a-2353981eb217"
+        "outputId": "39e55c50-17c8-4177-e5ce-fb25fb17a789"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.5249757750583244e-09"
+              "1.5249757750659492e-09"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 16
         }
       ],
       "source": [
         "# Estimated time by instruction\n",
         "\n",
-        "305/200003177092\n"
+        "305/200003177091\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "18N1ouqeMhE1",
-        "outputId": "0f4f2a06-dace-4593-a36e-957864966304"
+        "outputId": "f37bdb87-e84a-489d-9629-e0ae21150138"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "655748121.6131147"
+              "655748121.6098361"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 17
         }
       ],
       "source": [
         "# Estimated number of instructions by second\n",
         "\n",
-        "200003177092/305"
+        "200003177091/305"
       ]
     },
     {
